A bunch of new plugins

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,12 @@ dependencies = [
     "datasette-write-ui",
     "datasette-configure-fts",
     "datasette-write",
+    "datasette-upload-csvs",
+    "datasette-enrichments",
+    "datasette-enrichments-quickqs",
+    "datasette-enrichments-re2",
+    "datasette-enrichments-jinja",
+    "datasette-copyable",
 ]
 
 [project.urls]
