--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License"
 ]
 dependencies = [
-    "datasette>=1.0a12",
+    "datasette>=1.0a13",
     "datasette-edit-schema",
     "datasette-write-ui",
     "datasette-configure-fts",
@@ -21,6 +21,8 @@ dependencies = [
     "datasette-enrichments-re2",
     "datasette-enrichments-jinja",
     "datasette-copyable",
+    "datsaette-export-database",
+    "datsaette-enrichments-gpt",
 ]
 
 [project.urls]
