--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "datasette-copyable",
     "datasette-export-database",
     "datasette-enrichments-gpt",
+    "datasette-paste",
 ]
 
 [project.urls]
