--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "datasette-studio"
-version = "0.1a2"
+version = "0.1a3"
 description = "Datasette pre-configured with useful plugins"
 readme = "README.md"
 authors = [{name = "Simon Willison"}]
@@ -23,7 +23,7 @@ dependencies = [
     "datasette-copyable",
     "datasette-export-database",
     "datasette-enrichments-gpt",
-    "datasette-paste",
+    "datasette-import",
 ]
 
 [project.urls]
